--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,9 @@
     "@syncfusion/ej2-react-charts": "^29.2.5",
     "@tailwindcss/vite": "^4.1.6",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
+    "flowbite": "^3.1.2",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-apexcharts": "^1.7.0",
